fixed script issue and alignment of spans in close bun

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,6 +62,7 @@ h3.cursive {
       background-color: $white;
       transform: rotate(45deg);
       position: absolute;
+      right: 5px;
 
       &:before {
         position: relative;
